# turtlebot3_citylab_project

install/robot_patrol/include/robot_patrol/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
install/robot_patrol/include/robot_patrol/srv/detail/: get_direction__builder.hpp  get_direction__functions.c  get_direction__rosidl_typesupport_introspection_c.h  get_direction__rosidl_typesupport_introspection_cpp.hpp  get_direction__struct.h  get_direction__struct.hpp  get_direction__type_support.cpp
install/robot_patrol/lib/robot_patrol/: direction_server_node  direction_test_node  patrol_client_node  patrol_node
install/robot_patrol/share/ament_index/resource_index/package_run_dependencies/: robot_patrol
install/robot_patrol/share/ament_index/resource_index/rosidl_interfaces/: robot_patrol
install/robot_patrol/share/robot_patrol/: local_setup.sh  package.dsv  package.ps1  package.sh
install/robot_patrol/share/robot_patrol/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robot_patrolConfig.cmake  robot_patrol__rosidl_generator_cExport.cmake  robot_patrol__rosidl_typesupport_cExport-noconfig.cmake  robot_patrol__rosidl_typesupport_cppExport-noconfig.cmake  robot_patrol__rosidl_typesupport_introspection_cExport-noconfig.cmake  robot_patrol__rosidl_typesupport_introspection_cppExport-noconfig.cmake  robot_patrol__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robot_patrol/share/robot_patrol/launch/: main.launch.py  start_test_service.launch.py
install/robot_patrol/share/robot_patrol/srv/: GetDirection.idl  GetDirection_Request.msg
log/: latest_build
robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/launch/: start_direction_service.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py
robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
